# Devoteam_agents

./: .gitignore
wae-news-harvester-app-poc/: .env-sample  Makefile  README.md  docker-compose.yml  pyproject.toml
wae-news-harvester-app-poc/core/: config.py  logging_config.py  models.py  s3_utils.py  sqs_consumer.py  sqs_utils.py
wae-news-harvester-app-poc/harvester/: Dockerfile  README.md  harvester_scrape_config.json  harvester_scrape_config_large.json.example  import-config.py
wae-news-harvester-app-poc/harvester/app/: bedrock_token.py  crawler.py  dynamodb.py  main.py  message_processor.py  rss_processor.py
wae-news-harvester-app-poc/harvester/app/api/: endpoints.py
wae-news-harvester-app-poc/harvester/browser-profile/: ChromeFeatureState  Local State  first_party_sets.db
wae-news-harvester-app-poc/harvester/browser-profile/Default/: Account Web Data  BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  Top Sites  TransportSecurity  Web Data  passkey_enclave_state
wae-news-harvester-app-poc/harvester/browser-profile/Default/DawnGraphiteCache/: data_1  index
wae-news-harvester-app-poc/harvester/browser-profile/GrShaderCache/: data_1  index
wae-news-harvester-app-poc/harvester/browser-profile/GraphiteDawnCache/: data_0  data_1  data_2  f_00000b  index
wae-news-harvester-app-poc/harvester/browser-profile/ShaderCache/: data_1  index
wae-news-harvester-app-poc/harvester/browser-profile/segmentation_platform/: ukm_db
(+728 files in other folders)
